--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,14 @@
 #snake{
     border: 1px solid black;
 }
+
+body{
+    height: 95vh;
+    width: 95vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:white;
+    color: rgb(52, 165, 52);
+}
